# BetterBitCast

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/bbc/: deserializer.h  serializer.h
include/bbc/internals/: assert.h  concepts.h
include/bbc/internals/traits/: always_false.h  is_array_like.h  is_complete.h  is_specialization_of.h  serializable_container.h  tests.cpp
test/: CMakeLists.txt  bbc_test_main.cpp
test/basic/: primitives.cpp
